[gd_scene load_steps=3 format=3 uid="uid://brt5ikhgib8k7"]

[ext_resource type="Script" uid="uid://dmwrtfpqohva3" path="res://Scripts/main_menu.gd" id="1_48xlc"]
[ext_resource type="PackedScene" uid="uid://bvhg2nv87al38" path="res://Scenes/Scene_transition.tscn" id="2_1ehe0"]

[node name="Main menu" type="Node2D"]
script = ExtResource("1_48xlc")

[node name="Button_manager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Start" type="Button" parent="Button_manager"]
layout_mode = 0
offset_left = 569.0
offset_top = 265.0
offset_right = 1297.0
offset_bottom = 447.0
text = "Start Game"
icon_alignment = 1

[node name="Options" type="Button" parent="Button_manager"]
layout_mode = 0
offset_left = 601.0
offset_top = 489.0
offset_right = 1273.0
offset_bottom = 670.0
text = "Options"
icon_alignment = 1

[node name="Quit" type="Button" parent="Button_manager"]
layout_mode = 0
offset_left = 675.0
offset_top = 710.0
offset_right = 1205.0
offset_bottom = 871.0
text = "Quit"
icon_alignment = 1

[node name="ColorRect" parent="." instance=ExtResource("2_1ehe0")]
visible = false
offset_left = -44.0
offset_top = -26.0
offset_right = 1964.0
offset_bottom = 1114.0

[node name="Fade_timer" type="Timer" parent="ColorRect"]

[connection signal="pressed" from="Button_manager/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Button_manager/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Button_manager/Quit" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="ColorRect/Fade_timer" to="." method="_on_fade_timer_timeout"]
